Reorganizacion de clases. Corregido error con envio de codigo de confirmacion.

--- a/View/editarPerfil.html
+++ b/View/editarPerfil.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title></title>
@@ -9,7 +8,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="../osham/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <title>Registro</title>
 
